--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="AFEE de Gascogne : bougez avec la différence ! 
-    L'AFEE reste à votre écoute, page de contact">
+    L'AFEE se veut un lieu d'entraide, d'écoute, de parole et d'échanges, de conseil et de répit">
     <title>L'AFEE de Gascogne</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+    <script src="https://kit.fontawesome.com/4106466ae7.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+    <header>
+      <h1>Association des Familles d'Enfants Extraordinaires de le Gascogne Toulousaine</h1>
+      <nav class="navbar navbar-expand-sm navbar-light">
+        <div class="container-fluid nav-size">
+          <a class="navbar-brand" href="accueil.html"><img class="logo" src="LogoAFEE.png" 
+          alt="AFEE de Gascogne : bougez avec la différence !"></a>
+          <button
+            type="button"
+            class="navbar-toggler"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a href="accueil.html" class="nav-link text-light" aria-current="page">Accueil</a></li>
+              <li class="nav-item"><a href="event.html" class="nav-link text-light active">Evènements</a></li>
+              <li class="nav-item"><a href="contact.html" class="nav-link text-muted active">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <footer>
+      <div class="socialNetworks">
+        <a href="https://www.facebook.com/AFEEGascogne/" class="fa fa-facebook" target="_blank"></a>
+      </div>
+      <span class="copyright"> © AFEE 2022 </span>
+    </footer>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+    crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+    crossorigin="anonymous"></script>
   </body>
-  
+
 </html>
