Insert text and img

--- a/accueil.html
+++ b/accueil.html
@@ -40,6 +40,40 @@
         </div>
       </nav>
     </header>
+      <div>
+        <img class="presentation" src="sources/imgart1.jpg">        
+      </div>
+      <p>
+        Parce que nos enfants ne sont pas ordinaires, pas comme les autres, nous, familles d’enfants
+        présentant des déficiences physiques, sensorielles et/ou intellectuelles autour de L’Isle
+        Jourdain avons décidé de se regrouper afin de partager, écouter et échanger sur le thème du
+        handicap qui touche nos proches.
+        L’acceptation du handicap, sa reconnaissance, les démarches administratives, la mise en
+        place de prises en charge médicales et para-médicales, la scolarisation, etc… sont autant
+        d’obstacles sur le chemin de vie déjà cabossé des familles touchées par le handicap.
+        L’AFEE se veut un lieu d’entraide, d’écoute, de parole et d’échanges, de conseil et de répit
+        pour ces familles.
+      </p>
+      <div>
+        <img class="banniere" src="sources/imgasso.jpg">
+      </div>
+      <h2>Qui sommes-nous?</h2>
+      <p>Nous sommes un collectif de familles touchées par le handicap d’un enfant ou d’un proche.
+      Le but de l’association est de soutenir les familles touchées par le handicap et de faire 
+      avancer la société vers plus de tolérance et d’inclusion. Nous proposons des temps de 
+      rencontre, des activités pour nos proches en situation de handicap, des sensibilisations ou 
+      formations au handicap, une aide à la scolarisation des élèves en situation de handicap, 
+      ainsi qu’une ludothèque de matériel adapté pour le jeu, les apprentissages et la 
+      communication.</p>
+      <div>
+        <a href="http://ludotheque.afee-gascogne.org/accueil/index.php" taget="blank">
+          <img class="ludotheque" src="sources/imgludo.jpg">
+        </a>
+      </div>
+      <p>L’association possède une ludothèque de jeux et matériels éducatifs et de motricité. Nous 
+      proposons à nos familles adhérentes de partager des jeux et du matériel d'éveil et éducatif 
+      à destination des enfants en situation de handicap. Vous pouvez consulter notre catalogue 
+      sur le site de la ludothèque en cliquant sur l'image ci-dessus</p>
     <footer>
       <div class="socialNetworks">
         <a href="https://www.facebook.com/AFEEGascogne/" class="fa fa-facebook" target="_blank"></a>
