--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,20 @@
         </div>
       </nav>
     </header>
+      <h2>Nous contacter</h2>
+      <ul class="contact">
+        <li> Une adresse : Association des Familles d'Enfants Extraordinaires
+          7 rue Marcel Taillandier
+          32600 L'ISLE JOURDAIN
+        </li>
+        <li> Une adresse mail : afee.gascogne@gmail.com</li>
+        <li> Un numéro de téléphone : 07-82-18-54-42</li>
+        <li> Une page facebook : <a href="https://www.facebook.com/AFEEGascogne/" target="_blank">
+          https://www.facebook.com/AFEEGascogne/
+          </a>
+        </li>
+      </ul>
+      <iframe width="50px" height="50px" src="https://goo.gl/maps/L1mTp91mhqAz8JEx7"></iframe>
     <footer>
       <div class="socialNetworks">
         <a href="https://www.facebook.com/AFEEGascogne/" class="fa fa-facebook" target="_blank"></a>
