--- a/event.html
+++ b/event.html
@@ -40,6 +40,40 @@
         </div>
       </nav>
     </header>
+      <div>
+        <img class="illustration" src="sources/pause-cafe-travail.jpg">
+      </div>
+      <h2>Toute l'année</h2>
+      <p>Tout les mois nous nous retrouvons autour d'un café et de gateaux pour discuter, se 
+      détendre et proposer des activités pour nos proches en situation de handicap. L'idée principale 
+      de ces rendez-vous est de sortir de notre quotidien, mettre de côté cette routine souvent 
+      écrasante. Venez vous évader le temps d'une après-midi de 13h30 à 17h30 les premiers samedi du mois
+      </p>
+      <div>
+        <img class="illustration" src="sources/imgassgen.jpg">
+      </div>
+      <h2>Mars</h2>
+      <p>Assemblé générale de l'association à la salle des mariages de la mairie de l'Isle Jourdain. 
+      Rendez-vous vendredi 18 mars 2022 à 20h30.
+      </p>
+      <div>
+        <img class="illustration" src="sources/imgmed.png">
+      </div>
+      <h2>Mai</h2>
+      <p>En collaboration avec Pila Pillus nous proposons une après-midi de médiation animale. 
+        la médiation animale favorise les liens naturels et bienfaisants entre les humains et les 
+        animaux à des fins préventives, thérapeutiques et éducatives. Ce moment de partage se 
+        déroulera sur le site de <a href="https://pilapillus.com/" target="blank">pila Pillus.</a>
+        Date et horaire à venir.
+      </p>
+      <div>
+        <img class="illustration" src="sources/imgpicnic.jpg">
+      </div>
+      <h2>Pique-nique annuel</h2>
+      <p>Pique-nique des familles d'enfants porteurs de handica. Samedi 9 juillet 2022 à l'Isle 
+        Jourdain, aire de jeux du Lac côté parking, à partir de 11h. Pour se rencontrer, dialoguer, 
+        partager nos expériences, nos joies et nos difficultés. Nos enfants sont différents, donc 
+        ils sont Exceptionnels! Merci de confirmer votre présence.</p>
     <footer>
       <div class="socialNetworks">
         <a href="https://www.facebook.com/AFEEGascogne/" class="fa fa-facebook" target="_blank"></a>
