--- a/accueil.html
+++ b/accueil.html
@@ -41,7 +41,7 @@
       </nav>
     </header>
       <div>
-        <img class="presentation" src="sources/imgart1.jpg">        
+        <img class="illustration" src="sources/imgart1.jpg">        
       </div>
       <p>
         Parce que nos enfants ne sont pas ordinaires, pas comme les autres, nous, familles d’enfants
@@ -67,7 +67,7 @@
       communication.</p>
       <div>
         <a href="http://ludotheque.afee-gascogne.org/accueil/index.php" taget="blank">
-          <img class="ludotheque" src="sources/imgludo.jpg">
+          <img class="banniere" src="sources/imgludo.jpg">
         </a>
       </div>
       <p>L’association possède une ludothèque de jeux et matériels éducatifs et de motricité. Nous 
