--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,8 @@
           </a>
         </li>
       </ul>
-      <iframe width="50px" height="50px" src="https://goo.gl/maps/L1mTp91mhqAz8JEx7"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2888.562297712339!2d1.0887751109126873!3d43.61565437990059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a94fc9a6f81ce7%3A0xc5548e160bbb201d!2s7%20Rue%20Marcel%20Taillandier%2C%2032600%20L&#39;Isle-Jourdain!5e0!3m2!1sfr!2sfr!4v1645036360223!5m2!1sfr!2sfr" 
+      width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     <footer>
       <div class="socialNetworks">
         <a href="https://www.facebook.com/AFEEGascogne/" class="fa fa-facebook" target="_blank"></a>
