--- a/accueil.html
+++ b/accueil.html
@@ -40,40 +40,49 @@
         </div>
       </nav>
     </header>
-      <div>
-        <img class="illustration" src="sources/imgart1.jpg">        
+    <main>
+      <h2>L'AFEE de Gascogne : bougez avec la différence !</h2>
+      <div class="card article">
+        <img class="illustration card-img-top rounded-lg" src="sources/imgart1.jpg">        
+        <div class="card-body">
+          <p class="card-text">
+            Parce que nos enfants ne sont pas ordinaires, pas comme les autres, nous, familles d’enfants
+            présentant des déficiences physiques, sensorielles et/ou intellectuelles autour de L’Isle
+            Jourdain avons décidé de se regrouper afin de partager, écouter et échanger sur le thème du
+            handicap qui touche nos proches.
+            L’acceptation du handicap, sa reconnaissance, les démarches administratives, la mise en
+            place de prises en charge médicales et para-médicales, la scolarisation, etc… sont autant
+            d’obstacles sur le chemin de vie déjà cabossé des familles touchées par le handicap.
+            L’AFEE se veut un lieu d’entraide, d’écoute, de parole et d’échanges, de conseil et de répit
+            pour ces familles.
+          </p>
+        </div>
       </div>
-      <p>
-        Parce que nos enfants ne sont pas ordinaires, pas comme les autres, nous, familles d’enfants
-        présentant des déficiences physiques, sensorielles et/ou intellectuelles autour de L’Isle
-        Jourdain avons décidé de se regrouper afin de partager, écouter et échanger sur le thème du
-        handicap qui touche nos proches.
-        L’acceptation du handicap, sa reconnaissance, les démarches administratives, la mise en
-        place de prises en charge médicales et para-médicales, la scolarisation, etc… sont autant
-        d’obstacles sur le chemin de vie déjà cabossé des familles touchées par le handicap.
-        L’AFEE se veut un lieu d’entraide, d’écoute, de parole et d’échanges, de conseil et de répit
-        pour ces familles.
-      </p>
-      <div>
-        <img class="banniere" src="sources/imgasso.jpg">
+      <div class="card article-large">
+        <img class="card-img-top rounded-lg" src="sources/imgasso.jpg">
+        <div class="card-body">
+          <h2 class="card-title">Qui sommes-nous?</h2>
+          <p class="card-text">Nous sommes un collectif de familles touchées par le handicap d’un enfant ou d’un proche.
+          Le but de l’association est de soutenir les familles touchées par le handicap et de faire 
+          avancer la société vers plus de tolérance et d’inclusion. Nous proposons des temps de 
+          rencontre, des activités pour nos proches en situation de handicap, des sensibilisations ou 
+          formations au handicap, une aide à la scolarisation des élèves en situation de handicap, 
+          ainsi qu’une ludothèque de matériel adapté pour le jeu, les apprentissages et la 
+          communication.</p>
+        </div>
       </div>
-      <h2>Qui sommes-nous?</h2>
-      <p>Nous sommes un collectif de familles touchées par le handicap d’un enfant ou d’un proche.
-      Le but de l’association est de soutenir les familles touchées par le handicap et de faire 
-      avancer la société vers plus de tolérance et d’inclusion. Nous proposons des temps de 
-      rencontre, des activités pour nos proches en situation de handicap, des sensibilisations ou 
-      formations au handicap, une aide à la scolarisation des élèves en situation de handicap, 
-      ainsi qu’une ludothèque de matériel adapté pour le jeu, les apprentissages et la 
-      communication.</p>
-      <div>
+      <div class="card article-large">
         <a href="http://ludotheque.afee-gascogne.org/accueil/index.php" taget="blank">
-          <img class="banniere" src="sources/imgludo.jpg">
+          <img class="card-img-top rounded-lg" src="sources/imgludo.jpg">
         </a>
+        <div class="card-body">
+          <p class="card-text">L’association possède une ludothèque de jeux et matériels éducatifs et de motricité. Nous 
+          proposons à nos familles adhérentes de partager des jeux et du matériel d'éveil et éducatif 
+          à destination des enfants en situation de handicap. Vous pouvez consulter notre catalogue 
+          sur le site de la ludothèque en cliquant sur l'image ci-dessus.</p>
+        </div>
       </div>
-      <p>L’association possède une ludothèque de jeux et matériels éducatifs et de motricité. Nous 
-      proposons à nos familles adhérentes de partager des jeux et du matériel d'éveil et éducatif 
-      à destination des enfants en situation de handicap. Vous pouvez consulter notre catalogue 
-      sur le site de la ludothèque en cliquant sur l'image ci-dessus</p>
+    </main>
     <footer>
       <div class="socialNetworks">
         <a href="https://www.facebook.com/AFEEGascogne/" class="fa fa-facebook" target="_blank"></a>
