Style evnent and contact files

--- a/accueil.html
+++ b/accueil.html
@@ -82,6 +82,9 @@
           sur le site de la ludothèque en cliquant sur l'image ci-dessus.</p>
         </div>
       </div>
+      <div class="retour">
+        <a href="#" class="btn">Haut de page ↑</a>
+      </div>
     </main>
     <footer>
       <div class="socialNetworks">
