--- a/contact.html
+++ b/contact.html
@@ -40,21 +40,26 @@
         </div>
       </nav>
     </header>
-      <h2>Nous contacter</h2>
-      <ul class="contact">
-        <li> Une adresse : Association des Familles d'Enfants Extraordinaires
-          7 rue Marcel Taillandier
-          32600 L'ISLE JOURDAIN
-        </li>
-        <li> Une adresse mail : afee.gascogne@gmail.com</li>
-        <li> Un numéro de téléphone : 07-82-18-54-42</li>
-        <li> Une page facebook : <a href="https://www.facebook.com/AFEEGascogne/" target="_blank">
-          https://www.facebook.com/AFEEGascogne/
-          </a>
-        </li>
-      </ul>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2888.562297712339!2d1.0887751109126873!3d43.61565437990059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a94fc9a6f81ce7%3A0xc5548e160bbb201d!2s7%20Rue%20Marcel%20Taillandier%2C%2032600%20L&#39;Isle-Jourdain!5e0!3m2!1sfr!2sfr!4v1645036360223!5m2!1sfr!2sfr" 
-      width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <main>
+      <div class="card article">
+        <div class="card-body">
+          <h2 class="card-title">Nous contacter</h2>
+          <ul class="card-text">
+            <li> <u>Une adresse :</u> <br>Association des Familles d'Enfants Extraordinaires</br>
+              7 rue Marcel Taillandier <br>32600 L'ISLE JOURDAIN
+            </li>
+            <li> <u>Une adresse mail :</u> afee.gascogne@gmail.com</li>
+            <li> <u>Un numéro de téléphone :</u> 07-82-18-54-42</li>
+            <li> <u>Une page facebook :</u> <a href="https://www.facebook.com/AFEEGascogne/" target="_blank">
+              https://www.facebook.com/AFEEGascogne/
+              </a>
+            </li>
+          </ul>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2888.562297712339!2d1.0887751109126873!3d43.61565437990059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a94fc9a6f81ce7%3A0xc5548e160bbb201d!2s7%20Rue%20Marcel%20Taillandier%2C%2032600%20L&#39;Isle-Jourdain!5e0!3m2!1sfr!2sfr!4v1645036360223!5m2!1sfr!2sfr" 
+        width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy" class="card-img-bottom"></iframe>
+        </div>
+    </main>
     <footer>
       <div class="socialNetworks">
         <a href="https://www.facebook.com/AFEEGascogne/" class="fa fa-facebook" target="_blank"></a>
