Insert media query

--- a/contact.html
+++ b/contact.html
@@ -41,15 +41,15 @@
       </nav>
     </header>
     <main>
-      <div class="card article">
-        <div class="card-body">
-          <h2 class="card-title">Nous contacter</h2>
-          <ul class="card-text">
+      <div class="card contact">
+        <div class="card-body" id="bodycontact">
+          <h3 class="card-title">Nous contacter</h3>
+          <ul class="card-text listcontact">
             <li> <u>Une adresse :</u> <br>Association des Familles d'Enfants Extraordinaires</br>
               7 rue Marcel Taillandier <br>32600 L'ISLE JOURDAIN
             </li>
             <li> <u>Une adresse mail :</u> afee.gascogne@gmail.com</li>
-            <li> <u>Un numéro de téléphone :</u> 07-82-18-54-42</li>
+            <li> <u>Un numéro de téléphone :</u> 07.82.18.54.42</li>
             <li> <u>Une page facebook :</u> <a href="https://www.facebook.com/AFEEGascogne/" target="_blank">
               https://www.facebook.com/AFEEGascogne/
               </a>
