--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       <h1>Association des Familles d'Enfants Extraordinaires de le Gascogne Toulousaine</h1>
       <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container-fluid nav-size">
-          <a class="navbar-brand" href="accueil.html"><img class="logo" src="sources/LogoAFEE.png" 
+          <a class="navbar-brand" href="index.html"><img class="logo" src="sources/LogoAFEE.png" 
           alt="AFEE de Gascogne : bougez avec la différence !"></a>
           <button
             type="button"
@@ -32,7 +32,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-              <li class="nav-item"><a href="accueil.html" class="nav-link text-light" aria-current="page">Accueil</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link text-light" aria-current="page">Accueil</a></li>
               <li class="nav-item"><a href="event.html" class="nav-link text-light active">Evènements</a></li>
               <li class="nav-item"><a href="contact.html" class="nav-link text-muted active">Contact</a></li>
             </ul>
